--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,11 @@ asgiref==3.2.3
 beautifulsoup4==4.8.2
 Django==3.0.2
 django-bootstrap4==1.1.1
+django-ranged-response==0.2.0
 django-restframework==0.0.1
+django-simple-captcha==0.5.12
+Pillow==7.0.0
 pytz==2019.3
+six==1.14.0
 soupsieve==1.9.5
 sqlparse==0.3.0
